testsuite/tests/grammar/invalid_lexers/case_7.lkt
from common import Example

lexer foo_example {
    Foo <- null
    match p"foo" {
        if previous_token is Foo then send(Foo, 3)
        else send(Bar, 3)
    }
}
